# agentcockpit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION-SUMMARY.md  LICENSE  MARKETPLACE-INTEGRATION-COMPLETE.md  PHASE2-INTEGRATION-WRAPPER.md  PHASE3-WRAPPER-EXECUTION.md  PHASE4-MCP-INTEGRATION.md  PHASE5-STATE-PERSISTENCE.md  PHASE6-EXECUTION-DASHBOARD.md  QUICK-START-PHASE4.md  README.md  agentcockpit-project.json  index.html  one-term-project.json  package.json  pipeline-visualizer.html  pnpm-lock.yaml  vite.config.ts
.agentcockpit/: snapshots.json
.claude/: .onboarding_status  ROADMAP-MARKETPLACE.md  SESSION_CONTEXT.md  SETUP_COMPLETE.md  cfa.yaml  map.md  memories.json  memory.db  orchestration.db  settings.json
.pipeline-manager/: README.md  pipeline_cli.py  pipeline_controller.py.bak  pyproject.toml  run_mcp.sh  state.json  steps.yaml
.pipeline-manager/.claude/: current-task.md  decisions.md  map.md  memories.json  settings.json
.pipeline-manager/data/: ig-mcp.db
.pipeline-manager/data/sessions/: rixmerz_xd.json
.pipeline-manager/src/pipeline_manager/: __init__.py  __main__.py  graph_engine.py  graph_parser.py  graph_state.py  server.py
docs/: PLUGINS.md  brainstorming-session-results.md  opcode-shell-execution-research.md
one-term/: package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: browser.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  lib.rs  main.rs  pty.rs
(+230 files in other folders)
