[package]
name = "agentcockpit"
version = "1.1.0"
description = "Your AI agent cockpit - Control Claude and other AI agents from a unified terminal interface"
authors = ["Juan Pablo Diaz"]
license = "MIT"
repository = "https://github.com/agentcockpit/agentcockpit"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agentcockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "unstable"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.8"
parking_lot = "0.12"
tauri-plugin-shell = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
